# MLPipeline

./: .gitignore  Dockerfile.airflow  Dockerfile.ray  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-ml.txt
baseline/: README.md  compare.py  old_pipeline.py
configs/: clients.yaml  project.yaml
dags/: pipeline_dag.py
docs/: PRESENTATION_OUTLINE.md  README.md  architecture.md  cost_estimate.md  decisions.md
src/: config.py  data_gen.py  data_prep.py  pipeline.py  registry.py  simulate.py  split.py  train.py
